--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "illuminate/database": "^7.3"
+        "illuminate/database": "^7.3",
+        "illuminate/support": "^7.3"
     },
     "autoload": {
         "psr-4": {
@@ -23,6 +24,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "orchestra/testbench": "^5.1"
     }
 }
