--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "illuminate/database": "^7.3",
         "illuminate/support": "^7.3"
     },
+    "require-dev": {
+        "orchestra/testbench": "^5.1"
+    },
     "autoload": {
         "psr-4": {
             "Naoray\\EloquentModelAnalyzer\\": "./src"
@@ -23,7 +26,11 @@
             "Naoray\\EloquentModelAnalyzer\\Tests\\": "tests"
         }
     },
-    "require-dev": {
-        "orchestra/testbench": "^5.1"
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Naoray\\EloquentModelAnalyzer\\EloquentModelAnalyzerServiceProvider"
+            ]
+        }
     }
 }
