--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "illuminate/database": "^7.3",
-        "illuminate/support": "^7.3"
+        "illuminate/support": "^7.3",
+        "doctrine/dbal": "^2.10"
     },
     "require-dev": {
         "orchestra/testbench": "^5.1"
