--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/database": "^6.0|^7.3",
-        "illuminate/support": "^6.0|^7.3",
+        "illuminate/database": "^6.0|^7.3|^8.0",
+        "illuminate/support": "^6.0|^7.3|^8.0",
         "doctrine/dbal": "^2.10"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.1"
+        "orchestra/testbench": "^5.1|^6.0"
     },
     "autoload": {
         "psr-4": {
