--- a/.github/workflows/run-tests-L7.yml
+++ b/.github/workflows/run-tests-L7.yml
@@ -9,10 +9,12 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0, 7.4, 7.3, 7.2]
-        laravel: [7.*]
+        php: [8.0, 7.4, 7.3, 7.2, 8.0]
+        laravel: [7.*, 9.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
+          - laravel: 9.*
+            testbench: 7.*
           - laravel: 7.*
             testbench: 5.*
             dbal: ^2.10
