--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name": "naoray/eloquent-model-analyzer",
-    "description": "Helpful methods to gain more information about eloquent model classes.",
-    "type": "pakage",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Krishan Koenig",
-            "email": "krishan.koenig@googlemail.com"
-        }
-    ],
-    "require": {
-        "illuminate/database": "^6.0|^7.30.4|^8.40.0|^9.0",
-        "illuminate/support": "^6.0|^7.3|^8.24.0|^9.0",
-        "doctrine/dbal": "^2.6|^3.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^5.1|^6.0|^7.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Naoray\\EloquentModelAnalyzer\\": "./src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Naoray\\EloquentModelAnalyzer\\Tests\\": "tests"
-        }
+  "name": "naoray/eloquent-model-analyzer",
+  "description": "Helpful methods to gain more information about eloquent model classes.",
+  "type": "pakage",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Krishan Koenig",
+      "email": "krishan.koenig@googlemail.com"
     }
+  ],
+  "require": {
+    "illuminate/database": "^8.40.0|^9.0",
+    "illuminate/support": "^8.24.0|^9.0",
+    "doctrine/dbal": "^2.6|^3.0"
+  },
+  "require-dev": {
+    "orchestra/testbench": "^5.1|^6.0|^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Naoray\\EloquentModelAnalyzer\\": "./src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Naoray\\EloquentModelAnalyzer\\Tests\\": "tests"
+    }
+  }
 }
