--- a/.github/workflows/run-tests-L8.yml
+++ b/.github/workflows/run-tests-L8.yml
@@ -1,4 +1,4 @@
-name: "Run Tests - Current"
+name: "Run Tests - Old"
 
 on: [push, pull_request]
 
@@ -8,12 +8,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0, 7.4, 7.3, 8.0]
-        laravel: [8.*, 9.*]
+        php: [8.0, 7.4, 7.3]
+        laravel: [8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 9.*
-            testbench: 7.*
           - laravel: 8.*
             testbench: 6.*
 
