--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     "doctrine/dbal": "^2.6|^3.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^5.1|^6.0|^7.0"
+    "orchestra/testbench": "^6.0|^7.0"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Naoray\\EloquentModelAnalyzer\\": "./src"
