--- a/.github/workflows/run-tests-L9.yml
+++ b/.github/workflows/run-tests-L9.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         php: [8.0, 8.1]
         laravel: [9.*]
-        dependency-version: [prefer-lowest, prefer-stable]
+        dependency-version: [prefer-stable]
         include:
           - laravel: 9.*
             testbench: 7.*
