--- a/.github/workflows/run-tests-L8.yml
+++ b/.github/workflows/run-tests-L8.yml
@@ -9,9 +9,11 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0, 8.1]
-        laravel: [8.*]
+        laravel: [8.*, 10.*]
         dependency-version: [prefer-stable]
         include:
+          - laravel: 10.*
+            testbench: 8.*
           - laravel: 8.*
             testbench: 6.*
 
