--- a/.github/workflows/run-tests-L9.yml
+++ b/.github/workflows/run-tests-L9.yml
@@ -1,21 +1,31 @@
-name: "Run Tests - Current"
+name: Run Tests - Current
 
-on: [push, pull_request]
+on:
+  - push
+  - pull_request
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0, 8.1]
-        laravel: [9.*, 10.*]
+        php: [8.0, 8.1, '8.2']
+        laravel: ['9.*', '10.*', '11.*']
         dependency-version: [prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
           - laravel: 9.*
             testbench: 7.*
+          - laravel: 11.*
+            testbench: 9.*
+        exclude:
+          - laravel: 11.*
+            php: 8.0
+          - laravel: 11.*
+            php: 8.1
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
