--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.40.0|^9.0|^10.0",
-        "illuminate/support": "^8.24.0|^9.0|^10.0",
+        "illuminate/database": "^8.40.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.24.0|^9.0|^10.0|^11.0",
         "doctrine/dbal": "^2.6|^3.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0|^8.0"
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
